source/blender/io/wavefront_obj/importer/obj_import_objects.hh
@@ -27,16 +27,23 @@ struct GlobalVertices {
   Vector<float3> vert_normals;
 
   /**
-   * Vertex colors might not be present in the file at all, or only
-   * provided for some meshes. Store them in chunks as they are
-   * spelled out in the file, e.g. if there are 10 vertices in sequence, all
-   * with `xyzrgb` colors, they will be one block.
+   * Vertex color for each vertex. -1 indicates no vertex color was specified.
+   * Being shorter than vertices also means the missing vertices had no color.
    */
-  struct VertexColorsBlock {
-    Vector<float3> colors;
-    int start_vertex_index;
-  };
-  Vector<VertexColorsBlock> vertex_colors;
+  Vector<float3> vertex_colors;
+
+  void set_vertex_color(size_t index, float3 color)
+  {
+    if (index >= vertex_colors.size()) {
+      vertex_colors.resize(index + 1, float3(-1.0, -1.0, -1.0));
+    }
+    vertex_colors[index] = color;
+  }
+
+  bool has_vertex_color(size_t index) const
+  {
+    return index < vertex_colors.size() && vertex_colors[index].x >= 0.0;
+  }
 };
 
 /**
